--- a/content/07-operating-a-stake-pool/06-public-stake-pools.mdx
+++ b/content/07-operating-a-stake-pool/06-public-stake-pools.mdx
@@ -8,6 +8,7 @@ metaTitle: Stake pool operations and maintenance
 - [Checking leadership schedule](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/9_leadership_schedule.md)
 - [Querying stake snapshots and pool parameters](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/10_query_stakepool.md)
 - [Withdrawing rewards](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/11_withdraw-rewards.md) 
+- [Retiring a stake pool](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/12_retire_stakepool.md)
 
 ## How to obtain stake pool information
 
