--- a/content/07-operating-a-stake-pool/02-about-stake-pools.mdx
+++ b/content/07-operating-a-stake-pool/02-about-stake-pools.mdx
@@ -6,7 +6,7 @@ metaTitle: About stake pools, operators, and owners
 This section includes an overview of stake pool operations and explains the ways
 of creating and managing your own stake pool.
 
-A [stake pool](/core-concepts/stake-pools) is a reliable server node that holds and maintains the combined stake of various stakeholders in a single entity. Stake pools use the [Cardano node](https://docs.cardano.org/new-to-cardano/cardano-nodes) to validate how the pool interacts with the network and are responsible for transaction processing and block production.
+A [stake pool](/core-concepts/stake-pools) is a reliable server node that holds and maintains the combined stake of various stakeholders in a single entity. Stake pools use the [Cardano node](https://docs.cardano.org/learn/cardano-node/) to validate how the pool interacts with the network and are responsible for transaction processing and block production.
 
 Successfully operating a stake pool includes the roles of a stake pool operator
 and one or more stake pool owner(s). It is important to note that there is a
