--- a/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
+++ b/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
@@ -18,7 +18,7 @@ You can then proceed with the operational tasks for managing your stake pool.
 
 - Querying stake snapshot
 - Querying leadership schedule
-- Querying KES period info
+- Querying KES period information
 - Renewing KES keys and an operational certificate
     
 7. [Stake pool operations part 2](https://youtu.be/2LHCWyvM4Lc)
