--- a/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
+++ b/content/07-operating-a-stake-pool/03-creating-a-stake-pool.mdx
@@ -31,7 +31,7 @@ You can then proceed with the operational tasks for managing your stake pool.
 - [Updating cardano-node and cardano-cli](https://youtu.be/WcT2gyflJKg)
 - [Retiring a stake pool](https://youtu.be/x4Igwc_WaoA)
 
-**Supporting [handbook](/cardano-course/handbook/create-a-stake-pool)  material:**
+Supporting **handbook** material:
 
 - [The Setup](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/the-setup)
 - [Generating keys](https://cardano-course.gitbook.io/cardano-course/handbook/create-a-stake-pool/generate-keys)
