--- a/content/06-development-guidelines/01-installing-the-cardano-node.mdx
+++ b/content/06-development-guidelines/01-installing-the-cardano-node.mdx
@@ -25,6 +25,6 @@ Once you have installed the node, you need to
 
 ## Using Docker
 
-You can use Docker images to build a Cardano node. For more details, see [this explainer](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/Docker.md).
+You can also use a Docker image to build your Cardano node. For more details, see [this explainer](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/Docker.md).
 
 
