--- a/content/06-development-guidelines/04-node-monitoring.mdx
+++ b/content/06-development-guidelines/04-node-monitoring.mdx
@@ -7,11 +7,16 @@ Regular monitoring of active nodes is crucial to determine if the node is runnin
 
 Activate a trace on the node to access metrics, including network traffic, memory usage, and general blockchain data. For details, see:
 
--   [Configuring logging](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/logging.md)
+-   [Configuring logging](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/logging.md)
     
 You can then choose a toolset to monitor your node:
 
--   [Monitoring the node with EKG](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/ekg.md)
--   [Using a Grafana Dashboard](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/grafana.md)
+-   [Monitoring the node with EKG](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/ekg.md)
+-   [Using a Grafana Dashboard](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/grafana.md)
 -   [Monitoring the node in real time with RTView](https://docs.cardano.org/cardano-components/cardano-rtview)
--   [Monitoring the node with Prometheus](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/prometheus.md)
+-   [Monitoring the node with Prometheus](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/logging-monitoring/prometheus.md)
+
+You can also see video tutorials and Cardano Course handbook material:
+
+- [Monitoring the node with Prometheus and Grafana](https://cardano-course.gitbook.io/cardano-course/handbook/monitoring-our-nodes)
+- [Video explainer on monitoring the node with Prometheus](https://www.youtube.com/watch?v=iqAmwhk7djE&list=PLNEK_Ejlx3x2ut-Pq-hi0NFVsgKB3EddR&index=22)
