Fix the CLI reference link

--- a/content/06-development-guidelines/05-use-cli.mdx
+++ b/content/06-development-guidelines/05-use-cli.mdx
@@ -10,7 +10,7 @@ tasks.
 
 It is organized in a hierarchy of subcommands, and each level comes with its own
 built-in documentation of command syntax and options. For more details, read the
-[CLI command reference](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/cardano-node-cli-reference.md/).
+**[CLI command reference](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/cardano-node-cli-reference.md)**.
 
 To access the top level help, type the following command (without arguments):
 
