--- a/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
+++ b/content/02-new-to-cardano/01-what-is-a-blockchain.mdx
@@ -31,7 +31,7 @@ difference between these systems:
 ![data-storage](data-storage.png)
 
 + **Centralized systems** — all data entries and activities are usually managed using one central server. This increases the risk of a single point of failure, and also means that the controlling entity (such as banks or government institutions, for example) act as decision-makers.
-+ **Decentralized systems** — generally rely on multiple server nodes, each of which serves a subset of the total end clients.
-+ **Distributed systems** — all data and records of transactions are encrypted and stored not in one server, but in a system of interconnected, independent nodes and terminals. This ensures independence from centralized entities, transparency, and security. 
++ **Distributed systems** — generally rely on multiple server nodes, each of which serves a subset of the total end clients.
++ **Decentralized systems** — all data and records of transactions are stored not in one server, but in a system of interconnected, independent nodes and terminals. This ensures independence from centralized entities, transparency, and security. 
 
 Finally, blockchains not only provide an immutable and secure database but also act as a functional environment to transact funds, create digital currencies, and process complex deals using digital agreements [(smart contracts)](/new-to-cardano/what-is-a-smart-contract).
