--- a/content/02-new-to-cardano/08-types-of-wallets.mdx
+++ b/content/02-new-to-cardano/08-types-of-wallets.mdx
@@ -120,4 +120,4 @@ See
 - [SimpleHold Wallet](https://simplehold.io/)
 - [Coin Wallet](https://coin.space/)
 - [NuFi](https://nu.fi/) 
-– [NOW Wallet](https://walletnow.app)
+- [NOW Wallet](https://walletnow.app)
