Correct links in 09-cardano-keys.md

--- a/content/03-learn/09-cardano-keys.mdx
+++ b/content/03-learn/09-cardano-keys.mdx
@@ -58,8 +58,8 @@ Address keys represent the functions of the addresses derived from the keys for 
 
 ## Further reading
 
-- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/3_keys_and_addresses.md)
-- [Creating KES key pair](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/7_KES_period.md)
+- [Creating keys and addresses](https://github.com/input-output-hk/cardano-node-wiki/wiki/3_keys_and_addresses)
+- [Creating KES key pair](https://github.com/input-output-hk/cardano-node-wiki/wiki/7_KES_period)
 - [Generating stake pool keys](https://iohk.zendesk.com/hc/en-us/articles/900001331786-Generate-stake-pool-keys)
 - [Generating payment/staking keys and address](https://iohk.zendesk.com/hc/en-us/articles/900001219883-Generating-payment-staking-keys-and-address)
 
