--- a/content/10-scalability-solutions/02-mithril.mdx
+++ b/content/10-scalability-solutions/02-mithril.mdx
@@ -3,3 +3,5 @@ title: Mithril
 metaTitle: Mithril
 externalUrl: https://mithril.network/doc/
 ---
+
+Mithril documentation is hosted here: https://mithril.network/doc/.
