Link to Hydra docs

--- a/content/10-scalability-solutions/01-hydra.mdx
+++ b/content/10-scalability-solutions/01-hydra.mdx
@@ -3,3 +3,5 @@ title: Hydra
 metaTitle: Hydra
 externalUrl: https://hydra.family/head-protocol/
 ---
+
+Hydra documentation is hosted here: https://hydra.family/head-protocol/
