--- a/content/10-scalability-solutions/02-mithril.mdx
+++ b/content/10-scalability-solutions/02-mithril.mdx
@@ -4,4 +4,4 @@ metaTitle: Mithril
 externalUrl: https://mithril.network/doc/
 ---
 
-Mithril documentation is hosted here: https://mithril.network/doc/.
+You can find [Mithril documentation here](https://mithril.network/doc/).
