--- a/content/10-scalability-solutions/01-hydra.mdx
+++ b/content/10-scalability-solutions/01-hydra.mdx
@@ -4,4 +4,4 @@ metaTitle: Hydra
 externalUrl: https://hydra.family/head-protocol/
 ---
 
-Hydra documentation is hosted here: https://hydra.family/head-protocol/
+You can find [Hydra documentation here](https://hydra.family/head-protocol/).
