--- a/content/15-pioneer-programs/01-plutus-pioneers.mdx
+++ b/content/15-pioneer-programs/01-plutus-pioneers.mdx
@@ -34,7 +34,7 @@ As with all learning experiences, the more you put in the more you will get out!
 
 ## When can I join?
 
-We have recently completed a very successful fourth cohort of this program and will be launching another course later this year. Please register your interest today using the form below to find out more details. 
+We have recently completed a very successful fourth cohort of this program and will be launching another course soon. Please register your interest today using the form below to find out more details. 
 
 ## How can I register for the Plutus Pioneer program?
 
