--- a/content/06-development-guidelines/07-transaction-tutorials/01-introduction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/01-introduction.mdx
@@ -4,15 +4,15 @@ metaTitle: What is a transaction?
 ---
 
 # What is a transaction?
-A transaction is an event created, signed, and sent by a user that modifies the ledger's state. It is commonly used to send ADA or other tokens from one user to another. It can also be used for other things such as token creation, delegation registration to a Stake Pool, or interaction with Smart contracts, among other things. The process to modify the ledger through a transaction is as follows:
+A transaction is an event that is created, signed, and sent by a user that modifies the ledger's state. It is commonly used to send ada or other tokens from one user to another. It can also be used for other things such as token creation, delegation registration to a stake pool, or interaction with smart contracts, among other things. The process to modify the ledger through a transaction is as follows:
 
-- Create the transaction:
-  A transaction contains a set of data that indicates how you want to modify the ledger. The most basic data in a transaction are UTxOs from which the funds are obtained and destination addresses to which you want to send funds with the desired amount of tokens. (Several tools help us create transactions, for example, wallets and cardano-cli)
+- Creating the transaction:
+  A transaction contains a set of data that indicates how you want to modify the ledger. The most basic data in a transaction are UTxOs from which the funds are obtained and destination addresses to which you want to send funds with the desired amount of tokens. (Several tools help us create transactions, for example, wallets and cardano-cli).
 
-- Sign the transaction:
-  The user who owns the funds to be spent must authorize the transaction through a signature. If the funds to be spent are in the Smart Contract address, the authorization is done by executing the Smart Contract itself. (Several tools help us sign transactions, for example, wallets and cardano-cli)
+- Signing the transaction:
+  The user who owns the funds to be spent must authorize the transaction through a signature. If the funds to be spent are in the smart contract address, the authorization is done by executing the smart contract itself. (Several tools help us sign transactions, for example, wallets and cardano-cli).
 
-- Submit the transaction:
-  For a transaction to take effect in the ledger, the user must submit it. The Stake Pools receive these transactions to validate and add them to the ledger within a block.
+- Submitting the transaction:
+  For a transaction to take effect in the ledger, the user must submit it. The stake pools receive these transactions which are then validated and added to the ledger within a block.
 
 Each transaction contains an identifier called TxId, and at the end of these three steps, you can see its content in a Cardano explorer such as https://explorer.cardano.org.
