--- a/content/06-development-guidelines/07-transaction-tutorials/02-minting-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/02-minting-transaction.mdx
@@ -1,4 +1,7 @@
-### Minting transaction
+---
+title: Minting transactions
+metaTitle: Minting transactions
+---
 
 The ability to create and manage custom tokens is one of the distinguishing features of the Cardano blockchain. Minting refers to the process of ´producing new tokens, either as part of an initial coin offering (ICO) or ongoing token issuance. Minting transactions allow users to generate or burn tokens according to predefined rules and parameters. In the following paragraphs, we will delve into the intricacies of minting transactions on the Cardano network.
 
