--- a/content/06-development-guidelines/07-transaction-tutorials/03-stake-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/03-stake-transaction.mdx
@@ -1,4 +1,7 @@
-### Staking transaction
+---
+title: Staking transactions
+metaTitle: Staking transactions
+---
 
 Staking is one of the main features of Cardano, this allows us to get rewards of holding our ADA, for this mechanism there are so called "Stake pools" in which anyone can hold their ADA.
 In this tutorial we will show how to delegate ADAs to a Stake Pool, withdraw rewards, and finally how to stop delegating your ADAs in case you want to delegate to another stake pool.
