--- a/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
@@ -1,4 +1,7 @@
-# Withdraw transaction
+---
+title: Withdrawing transactions
+metaTitle: Withdrawing transactions 
+---
 
 In this part of the tutorial we will demonstrate how to easy is to claim our rewards using the `cardano-cli`. First and foremost we need to ensure that we already have rewards available in our stake address. We can check it with the following command:
 
