--- a/content/06-development-guidelines/07-transaction-tutorials/05-redelegate-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/05-redelegate-transaction.mdx
@@ -1,4 +1,7 @@
-## Redelegation
+---
+title: Redelegation
+metaTitle: Redelegation
+---
 
 In this part we will show how to redelegate our ADAs to another Stake Pool. There can be multiple reasons to redelegate our ADAs, but the most common ones are:
 
