--- a/content/06-development-guidelines/07-transaction-tutorials/06-multiple-purposes.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/06-multiple-purposes.mdx
@@ -1,4 +1,7 @@
-## Multiple purposes
+---
+title: Multiple purposes
+metaTitle: Multiple purposes
+---
 
 Cardano allows us to create more complex transactions. So far we've seen different types of transactions: Metadata, simple script, minting, staking etc... but cardano gives us the flexibility to create more complex transactions and mix all the types of transactions that we want. for example add metadata to minting transactions or add staking component to a simple script transaction. In this tutorial we send a transaction with multiple purposes.
 
