--- a/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
@@ -3,7 +3,7 @@ title: Withdrawing transactions
 metaTitle: Withdrawing transactions 
 ---
 
-In this part of the tutorial we will demonstrate how to easy is to claim our rewards using the `cardano-cli`. First and foremost we need to ensure that we already have rewards available in our stake address. We can check it with the following command:
+This part of the tutorial will demonstrate how to easy is to claim rewards using the `cardano-cli`. First, you need to ensure that you already have rewards available in your stake address. Check it with the following command:
 
 ```
 $ cardano-cli query stake-address-info --address $(cat stake.addr)
