TW review of 03-stake-transaction.mdx

--- a/content/06-development-guidelines/07-transaction-tutorials/03-stake-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/03-stake-transaction.mdx
@@ -3,18 +3,19 @@ title: Staking transactions
 metaTitle: Staking transactions
 ---
 
-Staking is one of the main features of Cardano, this allows us to get rewards of holding our ADA, for this mechanism there are so called "Stake pools" in which anyone can hold their ADA.
-In this tutorial we will show how to delegate ADAs to a Stake Pool, withdraw rewards, and finally how to stop delegating your ADAs in case you want to delegate to another stake pool.
+Staking is a fundamental feature of Cardano, allowing you to earn rewards by delegating ada to stake pools. This tutorial shows how to delegate your ada to a stake pool, withdraw rewards, or stop delegating your ada if you decide to switch to another stake pool.
 
-To delegate ADAs first you have to generate a stake key pair. it means you will have your normal payment key pair (payment.vkey and payment.skey) and additinally have stake.vkey and stake.skey. Also you'll have a new address stake.addr just like payment.addr.
+To delegate ada, first, you need to generate a stake key pair. This involves creating a `stake.vkey` and `stake.skey`, in addition to your regular payment key pair (`payment.vkey` and `payment.skey`), and obtaining a new address called `stake.addr`, similar to your `payment.addr`.
 
-Let's say that we already have payment.vkey and payment.skey that you can generate easily using `cardano-cli address key-gen` command. now we have to create stake.vkey and stake.skey as follow:
+Assuming you already have your `payment.vkey` and `payment.skey`, which you can easily generate using the `cardano-cli address key-gen` command, proceed by creating the `stake.vkey` and `stake.skey`:
+
 ```
 cardano-cli stake-address key-gen \
     --verification-key-file stake.vkey \
     --signing-key-file stake.skey
 ```
-Until now we have payment key pair and stake key pair. The next step is to build the payment.addr and stake.addr files.
+
+Now you have your payment key pair and stake key pair. The next step is to build the `payment.addr` and `stake.addr` files:
 
 ```
 # payment.addr
@@ -23,7 +24,8 @@ cardano-cli address build \
     --stake-verification-key-file stake.vkey \
     --out-file payment.addr
 ```
-Notice that we add `--stake-verification-key-file`. it means that the command will construct an address with its staking part. In some examples we don't add this argument but addresses without staking part are used only to send and receive ADA and interact with dApps.
+
+Note that the example includes the `--stake-verification-key-file` argument. This command is used to create an address that includes its staking part. Addresses without a staking part are primarily used for sending and receiving ada, as well as interacting with DApps. Some examples may omit this argument, but it's crucial for delegation and participating in the staking process.
 
 ```
 # stake.addr
@@ -31,9 +33,12 @@ cardano-cli stake-address build \
     --stake-verification-key-file stake.vkey \
     --out-file stake.addr
 ```
-We only use the stake verification file for this command.
 
-Before we proceed with delegation, we need to create two new certificates: registration certificate and delegation certificate. We need those files to register our stake key into the blockchain and say that we want to delegate our ADAs.
+This command uses only the stake verification file.
+
+Before proceeding with delegation, it's essential to create two new certificates: a registration certificate and a delegation certificate. These files are required to register the stake key on the blockchain and indicate your intention to delegate ada.
+
+This command generates a certificate, which indicates the intention to register the stake key:
 
 ```
 # registration.cert
@@ -41,7 +46,8 @@ cardano-cli stake-address registration-certificate \
     --stake-verification-key-file stake.vkey \
     --out-file reg.cert
 ```
-With this command we generate a certificate that says that we want to register our stake key.
+
+Create a delegation certificate:
 
 ```
 # delegate.cert
@@ -50,11 +56,12 @@ cardano-cli stake-address delegation-certificate \
     --stake-pool-id pool18pn6p9ef58u4ga3wagp44qhzm8f6zncl57g6qgh0pk3yytwz54h \
     --out-file delegation.cert
 ```
-At this stage of the tutorial, you'll need to have a Stake Pool selected already. In our case, we selected ADACT (PoolId: pool18pn6p9ef58u4ga3wagp44qhzm8f6zncl57g6qgh0pk3yytwz54h). You can list all pools using the command `cardano-cli query stake-pools` or go to https://preview.cardanoscan.io/pools and select the pool that best suits your needs. Notice that we are using `preview` testnet, if you're using another testnet or mainnet make sure that the pool id is in the right network.
 
-Now that we have `reg.cert` file and `delegation.cert` files, let's move on to the next step. We need to send a transaction that contains the certificates, and we have two options: sending them one by one or sending them together. In our case we'll send them both at the same time.
+At this stage of the tutorial, you should have already selected a stake pool. The example features ADACT (PoolId: pool18pn6p9ef58u4ga3wagp44qhzm8f6zncl57g6qgh0pk3yytwz54h). You can list all pools using the command `cardano-cli query stake-pools` or visit https://preview.cardanoscan.io/pools to select the pool that best suits your needs. Please note that the example uses the `preview` testnet. If you're using another testnet or mainnet, make sure that the pool ID is on the correct network.
 
-We start by quering the funds of `payment.addr`
+Now that you have the `reg.cert` and `delegation.cert` files, you can proceed to the next step. You need to send a transaction containing the certificates. There are two options: sending them individually or sending them together. The example shows how to send them both at the same time.
+
+Start by querying the funds of `payment.addr`:
 
 ```
 cardano-cli query utxo --address $(cat payment.addr)
@@ -62,9 +69,12 @@ cardano-cli query utxo --address $(cat payment.addr)
 --------------------------------------------------------------------------------------
 142c46bb93b9c80140a6302e4a8a360e6f46f55aaf001c825ca790bb23572754     0        10000000000 lovelace + TxOutDatumNone
 ```
-If there are no funds in the address, you can request them from the faucet at https://docs.cardano.org/cardano-testnet/tools/faucet/ make sure that you select the right testnet.
 
-It's time to construct, sign and submit our transaction.
+If there are no funds in the address, you can request them from the [faucet](https://docs.cardano.org/cardano-testnet/tools/faucet/). Make sure you select the right testnet.
+
+It's time to build, sign, and submit your transaction.
+
+The command below introduces two new arguments of transaction creation: `--witness-override` and `certificate-file`. The first one specifies that the transaction will require two signatures. Therefore, transaction fees will be higher. `certificate-file` adds your new certificates to the transaction:
 
 ```
 cardano-cli transaction build \
@@ -75,9 +85,8 @@ cardano-cli transaction build \
     --change-address $(cat payment.addr) \
     --out-file delegateTx.raw
 ```
-This command introduces two new arguments of transaction creation: `--witness-override` and `certificate-file`. The first one specify that the transaction will require two signatures. Therefore, transaction fees will be higher. `certificate-file` adds our new certificates to the transaction.
 
-In the signing phase we have to add two signatures `payment.skey` and `stake.skey`
+In the signing phase, you need to add two signatures: `payment.skey` and `stake.skey`:
 
 ```
 cardano-cli transaction sign \
@@ -91,7 +100,7 @@ cardano-cli transaction submit \
 Transaction successfully submitted.
 ```
 
-Once the transaction is submitted and processed we have already delegated our ADAs, it's time to see our delegation and rewards.
+Once the transaction is submitted and processed, you have successfully delegated your ada. Now, let's take a look at your delegation and rewards:
 
 ```
 cardano-cli query stake-address-info --address $(cat stake.addr)
@@ -103,4 +112,5 @@ cardano-cli query stake-address-info --address $(cat stake.addr)
     }
 ]
 ```
-After some days we will get rewards, and in the next part of the tutorial we'll show how to withdraw them.
+
+After a few days, you will receive rewards, and the next part of the tutorial demonstrates how to withdraw them.
