--- a/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
@@ -3,7 +3,7 @@ title: Withdrawing transactions
 metaTitle: Withdrawing transactions 
 ---
 
-This part of the tutorial will demonstrate how to easy is to claim rewards using the `cardano-cli`. First, you need to ensure that you already have rewards available in your stake address. Check it with the following command:
+This part of the tutorial will demonstrate how easy it is to claim rewards using the `cardano-cli`. First, you need to ensure that you already have rewards available in your stake address. Check it with the following command:
 
 ```
 $ cardano-cli query stake-address-info --address $(cat stake.addr)
@@ -15,7 +15,9 @@ $ cardano-cli query stake-address-info --address $(cat stake.addr)
     }
 ]
 ```
-In this case you have ~29 ADA. Then you need some of your own ADA to pay the fees, so you need to query your payment address:
+
+In this case, you have ~29 ada. You also need some of your own ada to pay the fees, so you need to query your payment address:
+
 ```
 $ cardano-cli query utxo --address $(cat payment.addr)
                            TxHash                                 TxIx        Amount
@@ -23,7 +25,9 @@ $ cardano-cli query utxo --address $(cat payment.addr)
 afb33e353a9880b7cbd9e5eb2cbffa024d1b3b938ee2c739e53dd187094e8f0d     0        10000000 lovelace + TxOutDatumInline ReferenceTxInsScriptsInlineDatumsInBabbageEra (HashableScriptData "\216y\159\CAN*\255" (ScriptDataConstructor 0 [ScriptDataNumber 42]))
 afb33e353a9880b7cbd9e5eb2cbffa024d1b3b938ee2c739e53dd187094e8f0d     1        9987657206 lovelace + TxOutDatumNone
 ```
+
 Use the second UTXO with TxIx=1. You're ready to create your withdrawal transaction:
+
 ```
 cardano-cli transaction build \
     --tx-in afb33e353a9880b7cbd9e5eb2cbffa024d1b3b938ee2c739e53dd187094e8f0d#1 \
@@ -31,7 +35,9 @@ cardano-cli transaction build \
     --change-address $(cat payment.addr) \
     --out-file withdrawal-tx.raw
 ```
-Notice that this transaction will take funds from the stake address, so it will need to be signed with the `stake.skey` file too.
+
+Notice that this transaction will take funds from the stake address, so it will need to be signed with the `stake.skey` file:
+
 ```
 cardano-cli transaction sign \
     --tx-file withdrawal-tx.raw \
@@ -42,7 +48,8 @@ cardano-cli transaction sign \
 cardano-cli transaction submit --tx-file withdrawal-tx.signed
 ```
 
-Finally, verify that you have indeed received your rewards in your payment address:
+Finally, verify that you have received your rewards in your payment address:
+
 ```
 $ cardano-cli query utxo --address $(cat payment.addr)
                            TxHash                                 TxIx        Amount
